Revert "Fix comment reply spacing"

--- a/css/comments.css
+++ b/css/comments.css
@@ -91,6 +91,3 @@ Comments
 .comment-respond .comment-notes {
 	margin-bottom: 40px;
 }
-.comment-reply-title #cancel-comment-reply-link {
-	margin-left: 10px;
-}
